--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</div>	
 							
 							<div class="float-right social-download-wrap">
-								<a href="C:\Users\HP\Pictures\Natural Photography\1" download="1" class="btn btn-default float-left">
+								<a href=" cv/CV - Max McShane - EMS.pdf " download="CV - Max McShane - EMS.pdf" class="btn btn-default float-left">
 									<span class="mask"></span>
 									<span class="btn-label">
 										<b>download my CV</b>
