--- a/index.html
+++ b/index.html
@@ -251,21 +251,21 @@
 										<span class="hover-cap">BRANDING</span>
 										</a>
 									</li>
-									<li  class="item"   data-src="img/mock1.jpg" data-sub-html="<h6>BRANDING</h6><p>Branding for a brand new start-up gym in the centre of Bank, London.</p>" >
+									<li  class="item"   data-src="img/mock2.jpg" data-sub-html="<h6>BRANDING</h6><p>Branding for a brand new start-up gym in the centre of Bank, London.</p>" >
 										<a href="https://www.behance.net/gallery/16429217/Project-Fit-Brand-Implementation">
-										<img class="img-responsive" src="img/mock1.jpg"  alt="Branding image" />
-										<span class="hover-cap">BRANDING</span>
+										<img class="img-responsive" src="img/mock2.jpg"  alt="Branding image" />
+										<span class="hover-cap">ILLUSTRATION</span>
 										</a>
 									</li>
 									<li class="item" data-src="img/mock4.jpg" data-sub-html="<h6>UX PLATFORM</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
 										<a href="">
-										<img class="img-responsive" src="img/mock4.jpg"  alt="Image description" />
+										<img class="img-responsive" src="img/mock3.jpg"  alt="Image description" />
 										<span class="hover-cap">UX PLATFORM</span>
 										</a>
 									</li>									
 									<li class="item" data-src="img/mock5.jpg" data-sub-html="<h6>FALL/WINTER</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
 										<a href="">
-										<img class="img-responsive" src="img/mock5.jpg"  alt="Image description" />	
+										<img class="img-responsive" src="img/mock4.jpg"  alt="Image description" />	
 										<span class="hover-cap">FALL/WINTER</span>
 										</a>
 									</li>									
