--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						<!--Skills Sec-->
 						<section id="skill_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div skills-wrap  sec-pad-top sec-pad-bottom-xs">
 							<h6>technical skills</h6>
-							<p class="wow fadeInUp" data-wow-duration=".4s">Over the past 12 years I've explored my creativity through a vast range of software. In doing so I've acquired an enviable knack for picking up and employing new technologies where they pose an opportunity to help create viable and innovative solutions. There are some industry standard technologies that just can't be beaten. These are more than just tools and I dig deep to fully understand them.
+							<p class="wow fadeInUp" data-wow-duration=".4s">Over the past 12 years I have explored my creativity through a vast range of software. This has helped me master the ability to pick up new technologies, unearth their full range of capabilities and discover where they pose an opportunity to help create viable and innovative solutions. Some industry standard technologies are essential, these are more than just tools and I dig deep to fully understand them.
 							</p>
 							<div class="row margin-top-40">
 								<div class="col-sm-5 margin-bottom-sm">
