--- a/index.html
+++ b/index.html
@@ -247,25 +247,25 @@
 								<ul id="portfolio" class="portf auto-construct  project-gallery" data-col="2">
 									<li  class="item"   data-src="img/mock1.jpg" data-sub-html="<h6>BRANDING</h6><p>Branding for a brand new start-up gym in the centre of Bank, London.</p>" >
 										<a href="https://www.behance.net/gallery/16429217/Project-Fit-Brand-Implementation">
-										<img class="img-responsive" src="img/mock1.jpg"  alt="Branding image" />
+										<img class="img-responsive" src="img/mock1.jpg"  alt="Branding example image" />
 										<span class="hover-cap">BRANDING</span>
 										</a>
 									</li>
-									<li  class="item"   data-src="img/mock2.jpg" data-sub-html="<h6>Illustration</h6><p>Box Face</p>" >
+									<li  class="item"   data-src="img/mock2.jpg" data-sub-html="<h6>Illustration</h6><p>One in a personal series called Box Face</p>" >
 										<a href="https://www.behance.net/gallery/16429217/Project-Fit-Brand-Implementation">
-										<img class="img-responsive" src="img/mock2.jpg"  alt="Illustration image" />
+										<img class="img-responsive" src="img/mock2.jpg"  alt="Illustration example image" />
 										<span class="hover-cap">ILLUSTRATION</span>
 										</a>
 									</li>
-									<li class="item" data-src="img/mock3.jpg" data-sub-html="<h6>UX PLATFORM</h6><p>description here</p>">
+									<li class="item" data-src="img/mock3.jpg" data-sub-html="<h6>UX PLATFORM</h6><p>UX/UI design for an event organising / social networking platform p>">
 										<a href="">
-										<img class="img-responsive" src="img/mock3.jpg"  alt="Image description" />
+										<img class="img-responsive" src="img/mock3.jpg"  alt="UX example image" />
 										<span class="hover-cap">UX PLATFORM</span>
 										</a>
 									</li>									
-									<li class="item" data-src="img/mock4.jpg" data-sub-html="<h6>WEB DESIGN</h6><p>description here</p>">
+									<li class="item" data-src="img/mock4.jpg" data-sub-html="<h6>WEB DESIGN</h6><p>One page flat web design for lead generating software Big Lead Bear&copy</p>">
 										<a href="">
-										<img class="img-responsive" src="img/mock4.jpg"  alt="Image description" />	
+										<img class="img-responsive" src="img/mock4.jpg"  alt="Web design example" />	
 										<span class="hover-cap">WEB DESIGN</span>
 										</a>
 									</li>									
