Add seo metadata

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Max McShane CV</title>
-		<meta name="keywords" content="Max McShane, cv template, responsive template, vcard, html5 template, bootstrap, html5, creative, sass, clean, design, modern, angular js" />
+		<title>Desgin and Marketing</title>
+		<meta name="description" content="A CV / Resume for web design, design for print and digital marketing services by Max McShane"/>
+		<meta name="keywords" content="Max McShane, web design, marketing, SEO, digital marketing services, responsive, vcard, bootstrap, html5, creative, sass, clean, design, modern" />
+		<meta name="author" content="Max McShane"/>
 		
 		<!--Rocket-->
 		<link rel="shortcut icon" href="rocket.png">
