--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Desgin and Marketing</title>
+		<title>Design and Marketing</title>
 		<meta name="description" content="A CV / Resume for web design, design for print and digital marketing services by Max McShane"/>
 		<meta name="keywords" content="Max McShane, web design, marketing, SEO, digital marketing services, responsive, vcard, bootstrap, html5, creative, sass, clean, design, modern" />
 		<meta name="author" content="Max McShane"/>
