--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								I have a passion for creative marketing and seeing interesting and innovative start-up ideas succeed. It's seeing the fruition and being part of the fulfilment of a project that motivates me. I am a perpetual learner, which lends itself to the rapidly evolving industry of marketing. It's crucial for a marketer to perform an array of tasks: branding, SEO, web design, data metrics, A/B testing, CRM. I have devoted many years to practising all of these and am proud to claim this full-stack marketing outfit with certifications from <a href="https://support.google.com/partners/answer/3154326?hl=en-GB" class="goto-social" target="_blank">Google</a> & <a href="https://academy.hubspot.com/certification" class="goto-social" target="_blank">Hubspot.</a> I enjoy using this skill set to help start-ups succeed. 
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								 Indulging in the more creative side of this skill set has enabled me to practise my other passion; grahic design. I have worked on many projects soley as a designer for web and print. You can find a collection on my commercial work and personal projects on social sites <a class="goto-social" href="https://www.behance.net/maxmcshane" target="_blank">Behance</a> & <a href="https://dribbble.com/MaxMcShane" class="goto-social" target="_blank">Dribbble</a>. You can catch a partial view of my photography attempts on <a href="https://www.instagram.com/maxmcshane/" class="goto-social" target="_blank">Instagram</a>
+								 Indulging in the more creative side of this skill set has enabled me to practise my other passion; grahic design. I have worked on many projects solely as a designer for web and print. You can find a collection of my commercial work and personal projects on social sites <a class="goto-social" href="https://www.behance.net/maxmcshane" target="_blank">Behance</a> & <a href="https://dribbble.com/MaxMcShane" class="goto-social" target="_blank">Dribbble</a>. You can catch a partial view of my photography attempts on <a href="https://www.instagram.com/maxmcshane/" class="goto-social" target="_blank">Instagram.</a>
 							</p>
 							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
 								<img class="img-responsive" src="img/signature.png" alt="signature"/>
@@ -156,7 +156,7 @@
 						<!--Skills Sec-->
 						<section id="skill_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div skills-wrap  sec-pad-top sec-pad-bottom-xs">
 							<h6>technical skills</h6>
-							<p class="wow fadeInUp" data-wow-duration=".4s">Over the past 12 years I have explored my creativity through a vast range of software. This has helped me master the ability to pick up new technologies, unearth their full range of capabilities and discover opportunities to help create viable and innovative solutions. Some industry standard technologies are essential, these are more than just tools and I dig deep to fully understand them.
+							<p class="wow fadeInUp" data-wow-duration=".4s">Over the past 12 years I have explored my creativity through a vast range of software. This has helped me master the ability to pick up new technologies, unearth their full range of capabilities and discover opportunities to help create viable and innovative solutions. Some industry standard technologies are essential - these are more than just tools and I dig deep to fully understand them.
 							</p>
 							<div class="row margin-top-40">
 								<div class="col-sm-5 margin-bottom-sm">
@@ -290,7 +290,7 @@
 						<section id="edu_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div education-wrap  sec-pad">
 							<h6>education</h6>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								In addition to education through traditional institutions (seen below), I have gained a lot of my skill through industry academies and training online. I've particularly been able to flourish unsing online resources from <a href="https://www.codecademy.com/" class="goto-social" target="_blank">Codecademy</a>, the <a href="http://academy.hubspot.com/" class="goto-social" target="_blank">Hubspot Academy</a> and <a href="https://www.google.com/partners/#p_certifications" class="goto-social" target="_blank">Google Certification</a> exams.
+								In addition to education through traditional institutions (see below), I have gained a lot of my skills through industry academies and training online. I've particularly been able to flourish using online resources from <a href="https://www.codecademy.com/" class="goto-social" target="_blank">Codecademy</a>, the <a href="http://academy.hubspot.com/" class="goto-social" target="_blank">Hubspot Academy</a> and <a href="https://www.google.com/partners/#p_certifications" class="goto-social" target="_blank">Google Certification</a> exams.
 							</p>
 							<div class="qualfication-wrap">
 								<div class="qualfication first-row wow fadeInUp" data-wow-duration=".4s">
@@ -346,7 +346,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Welford Media, Leeds</span>
-													<p class="job-summary p-small">Being the first full time digital agency in my career and being one among many in the Leeds digital hub, I quickly learned to be proficient and effective in a faster paced work environment.</p>
+													<p class="job-summary p-small">As the first full time digital agency in my career and being one among many in the Leeds digital hub, at Welford I quickly learned to be proficient and effective in a faster-paced work environment.</p>
 												</div> 
 											</div>	
 										</div>
@@ -363,7 +363,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Coordinator</span>
 													<span class="job-loc">Santoro London Ltd, Wath	</span>
-													<p class="job-summary p-small">This Art Studio and Gift Manufacturer, with clear and defined work procedures, helped me grow both personally and professionally.  With opportunities to draw up and pitch new strategic ideas to the head, I learned to present these ideas in a more intelligent way.</p>
+													<p class="job-summary p-small">This art studio and gift manufacturer, with clear and defined work procedures, helped me grow both personally and professionally.  With opportunities to draw up and pitch new strategic ideas to the head, I learned to present these ideas in a more intelligent way.</p>
 												</div>
 											</div>	
 										</div>
@@ -380,7 +380,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Assistant	</span>
 													<span class="job-loc">Link Communication, Leeds	</span>
-													<p class="job-summary p-small">Starting here as a part-time field marketing assistant, offering product demonstrations and data capture, I was soon able to offer them my creative skills. This went on to give me the confidence to offer my services as a freelancer.</p>
+													<p class="job-summary p-small">Starting here as a part-time Field Marketing Assistant, offering product demonstrations and data capture, I was soon able to offer Link my creative skills. This give me the confidence to offer my services as a freelancer.</p>
 												</div>
 											</div>	
 										</div>
