--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 						<!--Achivement Sec-->
 						<section id="achivement_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div achivement-wrap  sec-pad-top sec-pad-bottom-sm">
 							<h6>References</h6>
-							<p class="wow fadeInUp" data-wow-duration=".4s">"Max is a great Graphic Designer and i would recommend him to anyone that is looking to create a new brand or develop an existing one. He is extremely creative and has great knowledge of design and brand awareness. He has also created some Marketing campaigns for us. Our new business in central London, Project Fit, has been soley branded by Max. We have had incredible feedback and part of the success has to be down the great brand image Max has created for us."</p>
+							<p class="wow fadeInUp" data-wow-duration=".4s">"Max is a great Graphic Designer and I would recommend him to anyone that is looking to create a new brand or develop an existing one. He is extremely creative and has great knowledge of design and brand awareness. He has also created some marketing campaigns for us. Our new business in central London, Project Fit, has been soley branded by Max. We have had incredible feedback and part of the success has to be down the great brand image Max has created for us."</p>
 							<div class="achivement-list-wrap margin-top-40">
 								<ul class="row">
 									<li class="col-sm-6">
@@ -441,12 +441,12 @@
 									</li>
 									<li class="col-sm-6">
 										<ul>
-											<li class="margin-bottom-xs wow fadeInUp" data-wow-duration=".4s" data-wow-delay="0s"><span class="dash-pointer">-</span><span class="achive-pts">Ben Staines Founder, Project Fit</span></li>
+											<li class="margin-bottom-xs wow fadeInUp" data-wow-duration=".4s" data-wow-delay="0s"><span class="dash-pointer">-</span><span class="achive-pts">Ben Staines. Founder, Project Fit</span></li>
 											
 									</li>
 								</ul>
 							</div>	
-							<p class="wow fadeInUp" data-wow-duration=".4s">"Max always went above and beyond what was expected of him. He was able to help us out with a variety of creative that was often presented to the CEOs of large international companies and received with high praise"</p>
+							<p class="wow fadeInUp" data-wow-duration=".4s">"Max always went above and beyond what was expected of him. He was able to help us out with a variety of creative that was often presented to the CEOs of large international companies and received with high praise."</p>
 							<div class="achivement-list-wrap margin-top-40">
 								<ul class="row">
 									<li class="col-sm-6">
@@ -460,7 +460,7 @@
 									</li>
 									<li class="col-sm-6">
 										<ul>
-											<li class="margin-bottom-xs wow fadeInUp" data-wow-duration=".4s" data-wow-delay="0s"><span class="dash-pointer">-</span><span class="achive-pts">Joel Kaufman MD, Link Communication</span></li>
+											<li class="margin-bottom-xs wow fadeInUp" data-wow-duration=".4s" data-wow-delay="0s"><span class="dash-pointer">-</span><span class="achive-pts">Joel Kaufman. MD, Link Communication</span></li>
 											
 									</li>
 								</ul>
