--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Welford Media, Leeds</span>
-													<p class="job-summary p-small">As the first full time digital agency in my career and being one among many in the Leeds digital hub, at Welford I quickly learned to be proficient and effective in a faster-paced work environment.</p>
+													<p class="job-summary p-small">As the first full-time digital agency in my career and being one among many in the Leeds digital hub, at Welford I quickly learned to be proficient and effective in a faster-paced work environment.</p>
 												</div> 
 											</div>	
 										</div>
@@ -380,7 +380,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Assistant	</span>
 													<span class="job-loc">Link Communication, Leeds	</span>
-													<p class="job-summary p-small">Starting here as a part-time Field Marketing Assistant, offering product demonstrations and data capture, I was soon able to offer Link my creative skills. This give me the confidence to offer my services as a freelancer.</p>
+													<p class="job-summary p-small">Starting here as a part-time Field Marketing Assistant, offering product demonstrations and data capture, I was soon able to offer Link my creative skills. This gave me the confidence to offer my services as a freelancer.</p>
 												</div>
 											</div>	
 										</div>
