--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 						<!--Achivement Sec-->
 						<section id="achivement_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div achivement-wrap  sec-pad-top sec-pad-bottom-sm">
 							<h6>References</h6>
-							<p class="wow fadeInUp" data-wow-duration=".4s">"Max is a great Graphic Designer and I would recommend him to anyone that is looking to create a new brand or develop an existing one. He is extremely creative and has great knowledge of design and brand awareness. He has also created some marketing campaigns for us. Our new business in central London, Project Fit, has been soley branded by Max. We have had incredible feedback and part of the success has to be down the great brand image Max has created for us."</p>
+							<p class="wow fadeInUp" data-wow-duration=".4s">"Max is a great Graphic Designer and I would recommend him to anyone that is looking to create a new brand or develop an existing one. He is extremely creative and has great knowledge of design and brand awareness. He has also created some marketing campaigns for us. Our new business in central London, Project Fit, has been solely branded by Max. We have had incredible feedback and part of the success has to be down the great brand image Max has created for us."</p>
 							<div class="achivement-list-wrap margin-top-40">
 								<ul class="row">
 									<li class="col-sm-6">
