--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							</div>	
 							
 							<div class="float-right social-download-wrap">
-								<a href="download939.mediafireuserdownload.com/jbn1d33q68bg/nqpmos5utva4e6w/maxmcshanecv.pdf" download="maxmcshanecv" class="btn btn-default float-left">
+								<a href="download939.mediafireuserdownload.com/jbn1d33q68bg/nqpmos5utva4e6w/maxmcshanecv.pdf" class="btn btn-default float-left">
 									<span class="mask"></span>
 									<span class="btn-label">
 										<b>download my CV</b>
