--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							</div>	
 							
 							<div class="float-right social-download-wrap">
-								<a href="https://www.dropbox.com/s/rlkv4z2oyf3ftu3/maxmcshanecv.pdf?dl=0" class="btn btn-default float-left">
+								<a href="https://www.dropbox.com/s/rlkv4z2oyf3ftu3/maxmcshanecv.pdf?dl=0" target='_blank' class="btn btn-default float-left">
 									<span class="mask"></span>
 									<span class="btn-label">
 										<b>download my CV</b>
