--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".2s">
 									<span class="icon pe-7s-browser"></span>
 									<span class="key-fact">
-										SEO 
+										SEO/SEM
 									</span>
 								</div>
 							</div>	
