--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Welford Media, Leeds</span>
-													<p class="job-summary p-small">As the first full-time digital agency in my career and being one among many in the Leeds digital hub, at Welford I quickly learned to be proficient and effective in a faster-paced work environment.</p>
+													<p class="job-summary p-small">As a digital agency in Leeds, part of a competitive digital hub, I quickly learned to be proficient and effective in a faster-paced work environment. At Welford I managed a small team and I learnt to write and present proposals for tenders.</p>
 												</div> 
 											</div>	
 										</div>
