--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>Design and Marketing</title>
-		<meta name="description" content="A CV / Resume for web design, design for print and digital marketing services by Max McShane"/>
-		<meta name="keywords" content="Max McShane, web design, marketing, SEO, digital marketing services, responsive, vcard, bootstrap, html5, creative, sass, clean, design, modern" />
+		<meta name="description" content="A CV / Resume for growth hacking, web design, design for print and digital marketing services by Max McShane"/>
+		<meta name="keywords" content="Max McShane, growth hacking, web design, marketing, SEO, digital marketing services, responsive, vcard, bootstrap, html5, creative, sass, clean, design, modern" />
 		<meta name="author" content="Max McShane"/>
 		
 		<!--Rocket-->
@@ -106,12 +106,23 @@
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								I have a passion for creative marketing and seeing interesting and innovative start-up ideas succeed. It's seeing the fruition and being part of the fulfilment of a project that motivates me. I am a perpetual learner, which lends itself to the rapidly evolving industry of marketing. It's crucial for a marketer to perform an array of tasks: branding, SEO, web design, data metrics, A/B testing, CRM. I have devoted many years to practising all of these and am proud to claim this full-stack marketing outfit with certifications from <a href="https://www.dropbox.com/s/shssqhtytsdsf32/MarketingFundamentalsCertification.pdf?dl=0" class="goto-social" target="_blank">Google</a> & <a href="https://www.dropbox.com/s/efj5x9vy51shpr0/Hubspot%20Certification.pdf?dl=0" class="goto-social" target="_blank">Hubspot.</a> I enjoy using this skill set to help start-ups succeed. 
+							    I have a passion for creative marketing and a natural mind-set for growth hacking. I like to see interesting and innovative start-up ideas succeed. It's witnessing the fruition and being part of the fulfilment of a project that motivates me. 
+							</p>
+							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
+							    I’m a perpetual learner, but what growth hacker isn’t?
+							</p>
+							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
+								I have 10+ years’ experience wearing many different coloured hats: Branding, SEO, CRM, web design, data metrics/analytics, Adwords, A/B testing, UI/UX and ecommerce.
+							</p>
+							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
+								 I'm proud to claim this full-stack marketing outfit with certifications from <a href="https://support.google.com/partners/answer/3154326?hl=en-GB" class="goto-social" target="_blank">Google</a> & <a href="https://academy.hubspot.com/certification" class="goto-social" target="_blank">Hubspot</a>
+							</p>
+							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
+								 Indulging in my creative side, I occasionally freelance as a graphic designer. I have worked on many projects solely as a designer for web and print and still dabble in this when I have time.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								 Indulging in the more creative side of this skill set has enabled me to practise my other passion; grahic design. I have worked on many projects solely as a designer for web and print. You can find a collection of my commercial work and personal projects on social sites <a class="goto-social" href="https://www.behance.net/maxmcshane" target="_blank">Behance</a> & <a href="https://dribbble.com/MaxMcShane" class="goto-social" target="_blank">Dribbble</a>. You can catch a partial view of my photography attempts on <a href="https://www.instagram.com/maxmcshane/" class="goto-social" target="_blank">Instagram.</a>
+								  You can find a collection of my commercial work and personal projects on social sites <a class="goto-social" href="https://www.behance.net/maxmcshane" target="_blank">Behance</a> & <a href="https://dribbble.com/MaxMcShane" class="goto-social" target="_blank">Dribbble</a>. You can also catch a partial view of my attempts to channel this creativity on <a href="https://www.instagram.com/maxmcshane/" class="goto-social" target="_blank">Instagram</a>
 							</p>
-							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
 								<img class="img-responsive" src="img/signature.png" alt="signature"/>
 							</div>
 						</section>
