--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 						
 						<!--Work Sec-->
 						<section id="work_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div work-wrap  sec-pad">
-							<h6>work</h6>
+							<h6>creative</h6>
 							<div  class="portfolio-wrap project-gallery padding-sec-lg">
 								<ul id="portfolio" class="portf auto-construct  project-gallery" data-col="2">
 									<li  class="item"   data-src="img/mock1.jpg" data-sub-html="<h6>BRANDING</h6><p>Branding for a brand new start-up gym in the centre of Bank, London.</p>" >
