Graphic examples correction

--- a/index.html
+++ b/index.html
@@ -409,22 +409,22 @@
 										<span class="hover-cap">BRANDING</span>
 										</a>
 									</li>
-									<li  class="item"   data-src="img/mock2.jpg" data-sub-html="<h6>BRANDING</h6><p>Branding for a brand new start-up gym in the centre of Bank, London.</p>" >
+									<li  class="item"   data-src="img/mock2.jpg" data-sub-html="<h6>ILLUSTRATION</h6><p>Branding for a start-up gym in the centre of Bank, London.</p>" >
 										<a href="https://www.behance.net/gallery/16429217/Project-Fit-Brand-Implementation">
 										<img class="img-responsive" src="img/mock2.jpg"  alt="Infograph" />
 										<span class="hover-cap">ILLUSTRATION</span>
 										</a>
 									</li>
-									<li class="item" data-src="img/mock4.jpg" data-sub-html="<h6>UX PLATFORM</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
+									<li class="item" data-src="img/mock4.jpg" data-sub-html="<h6>WEB DESIGN</h6><p>Web design created for an automated marketing platform</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock4.jpg"  alt="Image description" />
-										<span class="hover-cap">UX PLATFORM</span>
+										<span class="hover-cap">WEB DESIGN</span>
 										</a>
 									</li>									
-									<li class="item" data-src="img/mock3.jpg" data-sub-html="<h6>FALL/WINTER</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
+									<li class="item" data-src="img/mock3.jpg" data-sub-html="<h6>UX DESIGN</h6><p>Concept app design for Unsplash</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock3.jpg"  alt="Image description" />	
-										<span class="hover-cap">FALL/WINTER</span>
+										<span class="hover-cap">UX DESIGN</span>
 										</a>
 									</li>									
 								</ul>
