--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 										<span class="hover-cap">BRANDING</span>
 										</a>
 									</li>
-									<li  class="item"   data-src="img/mock2.jpg" data-sub-html="<h6>ILLUSTRATION</h6><p>Branding for a start-up gym in the centre of Bank, London.</p>" >
+									<li  class="item"   data-src="img/mock2.jpg" data-sub-html="<h6>ILLUSTRATION</h6><p>Illustrations for a personal project.</p>" >
 										<a href="https://www.behance.net/gallery/16429217/Project-Fit-Brand-Implementation">
 										<img class="img-responsive" src="img/mock2.jpg"  alt="Infograph" />
 										<span class="hover-cap">ILLUSTRATION</span>
