--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Welford Media, Leeds</span>
-													<p class="job-summary p-small">As a digital agency in Leeds, part of a competitive digital hub, I quickly learned to be proficient and effective in a faster-paced work environment. At Welford I managed a small team and I learnt to write and present proposals for tenders.</p>
+													<p class="job-summary p-small">Working at this digital agency, I’ve experienced a fiercely competitive and fast paced working culture. Within which my responsibilities included managing a small marketing team developing strategies and defining KPI’s. This experience has helped me build on and improve my role in finding and testing new opportunities to grow revenue.</p>
 												</div> 
 											</div>	
 										</div>
