--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Coordinator</span>
 													<span class="job-loc">Santoro London Ltd, Wath	</span>
-													<p class="job-summary p-small">This art studio and gift manufacturer, with clear and defined work procedures, helped me grow both personally and professionally.  With opportunities to draw up and pitch new strategic ideas to the head, I learned to present these ideas in a more intelligent way.</p>
+													<p class="job-summary p-small">This art studio and gift manufacturer, with clear and defined work procedures, helped me grow both personally and professionally.  With opportunities to draw up and pitch new strategic ideas for both digital and direct marketing, I learned to present these ideas in a more intelligent way.</p>
 												</div>
 											</div>	
 										</div>
