--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								I have 10+ years’ experience wearing many different coloured hats: Branding, SEO, CRM, web design, data metrics/analytics, Adwords, A/B testing, UI/UX and ecommerce.
 							</p>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								 I'm proud to claim this full-stack marketing outfit with certifications from <a href="https://support.google.com/partners/answer/3154326?hl=en-GB" class="goto-social" target="_blank">Google</a>, <a href="https://academy.hubspot.com/certification" class="goto-social" target="_blank">Hubspot</a> & <a href="https://www.facebook.com/blueprint/certification" class="goto-social" target="_blank">Facebook BluePrint</a>
+								 I'm proud to claim this full-stack marketing outfit with certifications from <a href="https://support.google.com/partners/answer/3154326?hl=en-GB" class="goto-social" target="_blank">Google</a>, <a href="https://academy.hubspot.com/certification" class="goto-social" target="_blank">Hubspot</a> & <a href="https://www.facebook.com/blueprint/certification" class="goto-social" target="_blank">Facebook Blueprint</a>
 							</p>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
 								 Indulging in my creative side, I occasionally freelance as a graphic designer. I have worked on many projects solely as a designer for web and print and still dabble in this when I have time.
