Added more technical skills

--- a/index.html
+++ b/index.html
@@ -173,19 +173,19 @@
 							</p>
 							<div class="row margin-top-40">
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">PHOTOSHOP</span>
+									<span class="progress-cat">HTML/CSS</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="97">
-													<strong><i>97</i>%</strong>
+												<span data-width="75">
+													<strong><i>75</i>%</strong>
 												</span>
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">ILLUSTRATOR</span>
+									<span class="progress-cat">GOOGLE ANALYTICS</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
@@ -198,19 +198,19 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">HTML/CSS</span>
+									<span class="progress-cat">GOOGLE ADWORDS</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="76">
-													<strong><i>76</i>%</strong>
+												<span data-width="82">
+													<strong><i>82</i>%</strong>
 												</span>	
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">ADWORDS/ANALYTICS</span>
+									<span class="progress-cat">FACEBOOK/INSTAGRAM ADVERTISING</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
@@ -223,32 +223,59 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">POWERPOINT/KEYNOTE</span>
+									<span class="progress-cat">PHOTOSHOP</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="90">
-													<strong><i>90</i>%</strong>
+												<span data-width="92">
+													<strong><i>92</i>%</strong>
 												</span>
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">MAILCHIMP/CONSTANT CONTACT</span>
+									<span class="progress-cat">ILLUSTRATOR</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
 												<div class="bar-wrap">
-													<span data-width="86">
-														<strong><i>86</i>%</strong>
+													<span data-width="85">
+														<strong><i>85</i>%</strong>
 													</span>
 												</div>	
 											</div>
 										</div>	
 									</div>
 								</div>
-								
+								<div class="col-sm-5 margin-bottom-sm">
+									<span class="progress-cat">POWERPOINT/KEYNOTE</span>
+									<div class="progress-bar-graph"> 
+										<div class="progress-bar-wrap">
+											<div class="bar-wrap">
+												<div class="bar-wrap">
+													<span data-width="80">
+														<strong><i>80</i>%</strong>
+													</span>
+												</div>	
+											</div>
+										</div>	
+									</div>
+								</div>
+								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
+									<span class="progress-cat">MAILCHIP/CONSTANTCONTACT EMAIL</span>
+									<div class="progress-bar-graph"> 
+										<div class="progress-bar-wrap">
+											<div class="bar-wrap">
+												<div class="bar-wrap">
+													<span data-width="81">
+														<strong><i>81</i>%</strong>
+													</span>
+												</div>	
+											</div>
+										</div>	
+									</div>
+								</div>
 							</div>	
 						</section>
 						<!--/Skills Sec-->
