--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Charity Fundraiser	</span>
 													<span class="job-loc">Dialogue Direct, Oxford	</span>
-													<p class="job-summary p-small">My first of many charity fundraising experiences. While this particular job was paid, it vastly improved my communication skills. Now, I'm not just confident but passionate about volunteering for charitable work.</p>
+													<p class="job-summary p-small">My first of many charity fundraising experiences. This proved a good test and education in communication and negotiation skills. It also built on my confidence and passion for volunteering and charitable work.</p>
 												</div>
 											</div>	
 										</div>
