Link added text

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Assistant	</span>
 													<span class="job-loc">Link Communication, Leeds	</span>
-													<p class="job-summary p-small">Starting here as a part-time Field Marketing Assistant, offering product demonstrations and data capture, I was soon able to offer Link my creative skills. This gave me the confidence to offer my services as a freelancer.</p>
+													<p class="job-summary p-small">Starting here as a part-time Field Marketing Assistant, offering product demonstrations and data capture, I was soon able to offer Link my creative services optimising their client's commercial designs. From this experience I went on to offer my services as a freelancer.</p>
 												</div>
 											</div>	
 										</div>
