--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="86">
-													<strong><i>86</i>%</strong>
+												<span data-width="80">
+													<strong><i>80</i>%</strong>
 												</span>
 											</div>
 										</div>	
@@ -263,13 +263,13 @@
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">MAILCHIP/CONSTANTCONTACT EMAIL</span>
+									<span class="progress-cat">CRM/EMAIL Marketing</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
 												<div class="bar-wrap">
-													<span data-width="81">
-														<strong><i>81</i>%</strong>
+													<span data-width="90">
+														<strong><i>90</i>%</strong>
 													</span>
 												</div>	
 											</div>
