--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Welford Media, Leeds</span>
-													<p class="job-summary p-small">Working at this digital agency, I’ve experienced a fiercely competitive and fast paced working culture. Within which my responsibilities included managing a small marketing team developing strategies and defining KPI’s. This experience has helped me build on and improve my role in finding and testing new opportunities to grow revenue.</p>
+													<p class="job-summary p-small">Working at this digital agency facilitated the progression of my career in a role analysing, hypothesising and testing ideas to grow revenue. Optimising the sales funnel, increasing traffic, CVR, retention and defining the KPIs in each case. I was responsible for implementing SEO for organic traffic and PPC campaigns, through search, display and retargeting networks, in house.  </p>
 												</div> 
 											</div>	
 										</div>
