--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Coordinator</span>
 													<span class="job-loc">Santoro London Ltd, Wath	</span>
-													<p class="job-summary p-small">This art studio and gift manufacturer required help substantially growing a fan base. Initial duties involved creating databases to analyse and interpret sales and marketing results, building connections with online influencers, as well as help with press releases and trade shows. I later had the opportunity to draw up new strategic ideas for the MD.</p>
+													<p class="job-summary p-small">This art studio and gift manufacturer required help substantially growing a fan base. Initial duties involved creating databases to analyse and interpret sales and marketing results, building connections with online influencers, as well as help with press releases and trade shows.</p>
 												</div>
 											</div>	
 										</div>
