--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							</div>	
 							
 							<div class="float-right social-download-wrap">
-								<a href="http://download939.mediafire.com/sqnhyizoj68g/nqpmos5utva4e6w/maxmcshanecv.pdf" class="btn btn-default float-left">
+								<a href="https://www.mediafire.com/file/nca1vtrbmlu1r7u/maxmcshanecv.pdf" class="btn btn-default float-left">
 									<span class="mask"></span>
 									<span class="btn-label">
 										<b>download my CV</b>
