--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							    I have a passion for creative marketing and a natural mind-set for growth hacking. I like to see interesting and innovative start-up ideas succeed. It's witnessing the fruition and being part of the fulfilment of a project that motivates me. 
 							</p>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-							    I’m a perpetual learner, but what growth hacker isn’t?
+							    I’m a perpetual learner, but which growth hacker isn’t?
 							</p>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
 								I have 10+ years’ experience wearing many different coloured hats: Branding, SEO, CRM, web design, data metrics/analytics, Adwords, A/B testing, UI/UX and ecommerce.
