changes to about me

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-							    I have a passion for creative marketing and a natural mind-set for growth hacking. I like to see interesting and innovative start-up ideas succeed. It's witnessing the fruition and being part of the fulfilment of a project that motivates me. 
+							    I have a passion for creative marketing and growth hacking because I like to see interesting and innovative ideas succeed. It's witnessing the fruition and being part of the fulfilment of a project that motivates me. 
 							</p>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
 							    I’m a perpetual learner, but which growth hacker isn’t?
